# PartitionPlacement

./: .gitignore  CMakeLists.txt  README.md
configs/: CenterLineProps.json  PartitionPlacementProps.json  SimplifyBoundaryProps.json  props.json
data/: sample1.Info.geojson  sample10.Info.geojson  sample11.Info.geojson  sample2.Info.geojson  sample3.Info.geojson  sample4.Info.geojson  sample5.Info.geojson  sample6.Info.geojson  sample7.Info.geojson  sample8.Info.geojson  sample9.Info.geojson
include/: GeoJSON.hpp  PPGeoJSON.hpp  Partition.hpp  PartitionPlacement.hpp  PartitionPlacementContext.hpp  Placement.hpp  convertKernel.hpp  stdafx.h
include/CenterLine/: CenterLine.hpp  CenterLineContext.hpp  CenterLineEx.hpp
include/PartitionPlacement/: Partition.hpp  PartitionPlacement.hpp  PartitionPlacementContext.hpp  PartitionPlacementEx.hpp  Placement.hpp
include/SimplifyBoundary/: SimplifyBoundary.hpp  SimplifyBoundaryContext.hpp  SimplifyBoundaryEx.hpp
src/: CenterLine.cpp  PartitionPlacement.cpp  SimplifyBoundary.cpp
test/: PartitionPlacementTest.hpp  Viewer.hpp  main.cpp
test/CenterLine/: CenterLineTest.hpp  main.cpp
test/PartitionPlacement/: PartitionPlacementTest.hpp  main.cpp
test/SimplifyBoundary/: SimplifyBoundaryTest.hpp  main.cpp
